--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "electron-updater": "^4.2.4",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "keytar": "^4.4.1"
+    "node-wget": "^0.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
