--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "electron-notarize": "^0.1.1",
     "electron-updater": "^4.2.4",
     "express": "^4.17.1",
-    "if-env": "^1.0.4",
-    "node-wget": "^0.4.3"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
